<resources>
    <!-->Login and Welcome Activity<-->
    <string name="app_name">PHRA</string>
    <string name="PHRALogo">PHRA</string>
    <string name="editTextUsername">Username</string>
    <string name="editTextPassword">Password</string>
    <string name="buttonLogIn">LOGIN</string>
    <string name="textViewForgetPassword"><a href="http://www.google.com">Forget Password?</a></string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="PrimaryRegistration">Primary Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Log Out</string>

    <!-->Primary Registration<-->
    <string name="new_primary_registration">Add new Primary Registration</string>
    <string name="title_activity_form_primary_registration">FormPrimaryRegistration</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="owner_primary_registration">Owner</string>
    <string name="animal_primary_registration">Animal</string>
    <string name="user_drawer_layout_subheader">User</string>
    <string name="add_first_milk_recording">Add First Milk Recording</string>
    <!-->OwnerForm<-->
    <string name="select_area">Select Area:</string>
    <string name="urban">Urban</string>
    <string name="rural">Rural</string>
    <string name="owner_name">Owner Name</string>
    <string name="father_husband_name">Father\'s/Husband\'s Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="next">NEXT</string>
    <!-->AnimalForm<-->
    <string name="select_species">Species:</string>
    <string name="cow">Cow</string>
    <string name="buffalo">Buffalo</string>
    <string name="ear_tag_number">Ear Tag Number</string>
    <string name="name_of_animal">Name of Animal</string>
    <string name="age_of_animal">Age of Animal</string>
    <string name="breed">Breed Of Animal</string>
    <string name="date_of_calving">Date of Calving: (Select date)</string>
    <string name="lactation_number">Lactation Number:</string>
    <string name="sire_details">Sire Detail (Name &amp; Number)</string>
    <string name="dam_details">Dam Detail (Name &amp; Number)</string>
    <string name="first_recording_date">First Recording Date: (Select date)</string>
    <string name="ear_tag_of_calf">Ear Tag of Calf</string>
    <string name="sex_of_calf">Sex of Calf: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="remarks">Remarks</string>
    <string name="back">BACK</string>
    <string name="submit">SUBMIT</string>

    <!-->FirstMilkRecording<-->
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="evening">Evening</string>
    <string name="date_of_first_milk_recording">Date of First Milk Recording</string>
    <string name="day_of_first_milk_recording">Day of First Milk Recording</string>
    <string name="total">Total(in kg): </string>
    <string name="production">Production(in kg): </string>
    <string name="name_of_supervisor">Name of Supervisor</string>
    <string name="nil">--</string>
    <string name="name_of_vi_mr">Name of VI/MR</string>
</resources>
